[tool.poetry]
name = "py-lsl-framework"
version = "24.8.0"
description = "LSL python framework"
authors = ["erfea <erfea.tux@gmail.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lsl-gateway-client = "24.8.0"
lsl-gateway-server = "24.8.0"
redis = "^5.0.8"
pydantic-settings = "^2.4.0"
asyncinit = "^0.2.4"
dependency-injector = "4.42.0b1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
pytest = "^8.3.2"
pytest-docker = "^3.1.1"
httpx = "^0.27.0"
uvicorn = "^0.30.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s.%(funcName)s: %(message)s (%(filename)s:%(lineno)s)"
